tests/snapshots/output/void_one.snap
---
source: tests/snapshots/html.rs
description: "<div>Text<img src=\"image.jpg\" ><br />Some text<div> More text</div></div>\n"
---
<div>
    Text<img src="image.jpg" /><br />Some text
    <div>More text</div>
</div>
