tests/snapshots/output/void_two.snap
---
source: tests/snapshots/html.rs
description: "<div>Text<div>More text</div><img src=\"image.jpg\" >Some text<br /></div>\n"
---
<div>
    Text
    <div>More text</div>
    <img src="image.jpg" />Some text<br />
</div>
